layout overflow-x fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -725,7 +725,7 @@ header {
         width: 60px;
         height: 60px;
         top: 30px;
-        right: 50px;
+        right: 31px;
     }
     .menu-toggler {
         width: 40px;
